# Project

./: CMakeLists.txt  experiment.py  graphics.R  inputmaker.py  notes.org
.cache/clangd/index/: main_bucket.c.E12F62475DA299AC.idx  main_id.c.4B4DD0DC061A4AE5.idx  main_id_simd.c.998BCA64A88E007E.idx  main_simd.c.E34ABC7DEE74B633.idx  matrix_functions.c.FCADA3224E05F8DC.idx  matrix_functions.h.6D4D1264FFB2E68F.idx
include/: matrix_functions.h
src/: main.c  main_bucket.c  main_bucket_simd.c  main_id.c  main_id_simd.c  main_simd.c  main_static_bucket.c  matrix_functions.c
